[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "light-poseidon"
version = "0.1.1"
description = "Python bindings for light-poseidon (Poseidon hash for BN254)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mike Rostecki", email = "vadorovsky@protonmail.com"},
    {name = "flipchan", email = "flipchan@protonmail.com"},
]
keywords = ["cryptography", "hash", "poseidon", "zero-knowledge", "zksnark", "bn254"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "light_poseidon_python"
